GNOME Bugzilla – Bug 660277
nautilus crashed with SIGSEGV in gtk_icon_info_load_symbolic_for_context()
Last modified: 2011-09-28 18:22:57 UTC
this report has been filed here: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/860659 the reporter updated the machine to the new version of nautilus and got this crash afterwards , backtrace: .
+ Trace 228609
Thread 1 (Thread 0xb783e850 (LWP 5956))
Backtrace stopped: previous frame inner to this frame (corrupt stack?)
The following fix has been pushed: 82a39de places-sidebar: don't crash when not finding the eject symbolic icon The underlying problem here is your icon theme doesn't have a media-eject-symbolic icon, but we shouldn't crash in this case. I pushed a fix for the crash to git master.
Created attachment 197691 [details] [review] places-sidebar: don't crash when not finding the eject symbolic icon If a theme doesn't have media-eject-symbolic, icon_info can be NULL, and we would crash trying to load a pixbuf from it anyway. Fix this and show the stock 'missing image' pixbuf when the theme doesn't have the specified icons.