places-sidebar: don't crash when not finding the eject symbolic icon

If a theme doesn't have media-eject-symbolic, icon_info can be NULL, and
we would crash trying to load a pixbuf from it anyway.
Fix this and show the stock 'missing image' pixbuf when the theme
doesn't have the specified icons.

https://bugzilla.gnome.org/show_bug.cgi?id=660277